hopefully fixed foot and spacing

--- a/client/src/css/EditTranslations.css
+++ b/client/src/css/EditTranslations.css
@@ -20,12 +20,13 @@
 }
 
 .grid {
-  right: 0;
-  width: 30%;
-  display: grid;
-  gap: 1rem;
-  grid-auto-flow: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  display: flex;
+  flex-direction: row;
+  grid-gap: 1rem;
   padding-bottom: 10px;
+  margin-right: 50px;
 }
 
 .progress {
@@ -35,8 +36,8 @@
 }
 
 .submit-button {
-  width: 50%;
-  position: center;
+  width: 100%;
+  display: block;
   background-color: #5cdbd3;
   border-color: #5cdbd3;
 }
@@ -64,7 +65,6 @@
 }
 
 .translation-input {
-  margin-left: 10%;
   width: 80%;
 }
 
